--- a/pages/article1.html
+++ b/pages/article1.html
@@ -31,13 +31,6 @@
     <body>
 
 
-        <!-- PRE LOADER -->
-
-        <div class="preloader">
-             <div class="sk-spinner sk-spinner-pulse"></div>
-        </div>
-
-
 
         <!-- Navigation Section -->
 
@@ -48,12 +41,12 @@
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon icon-bar"></span>
                     </button>
-                    <a href="index.html" class="navbar-brand">NATURAGRAM.</a>
+                    <a href="../index.html" class="navbar-brand">NATURAGRAM.</a>
                 </div>
 
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="active"><a href="../index.html">Home</a></li>
                     </ul>
                 </div>
 
