--- a/pages/intro.html
+++ b/pages/intro.html
@@ -31,13 +31,6 @@
     <body>
 
 
-        <!-- PRE LOADER -->
-
-        <div class="preloader">
-             <div class="sk-spinner sk-spinner-pulse"></div>
-        </div>
-
-
 
         <!-- Navigation Section -->
 
@@ -48,12 +41,12 @@
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon icon-bar"></span>
                     </button>
-                    <a href="index.html" class="navbar-brand">NATURAGRAM.</a>
+                    <a href="../index.html" class="navbar-brand">NATURAGRAM.</a>
                 </div>
 
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="active"><a href="../index.html">Home</a></li>
                     </ul>
                 </div>
 
@@ -82,10 +75,10 @@
 
   	<section class="intro">
 
-      <p>Social media, more particularly Instagram, the most visual one, bring their share of Influencers.
+      Social media, more particularly Instagram, the most visual one, bring their share of Influencers.
       Influencers have an indirect impact on the environment, they geotag their posts and so, bring more people on sites.
       Indeed, 500 millions people use Instagram every day. Imagine the number of people who see the posts of influencers !
-      Those people get inspired by them and so want to recreate those posts in the same places. This create mass tourism.</p>
+      Those people get inspired by them and so want to recreate those posts in the same places. This create mass tourism.
 
 
 		</section>
