--- a/pages/article2.html
+++ b/pages/article2.html
@@ -30,15 +30,6 @@
 
     <body>
 
-
-        <!-- PRE LOADER -->
-
-        <div class="preloader">
-             <div class="sk-spinner sk-spinner-pulse"></div>
-        </div>
-
-
-
         <!-- Navigation Section -->
 
         <div class="navbar navbar-default navbar-static-top">
@@ -48,12 +39,12 @@
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon icon-bar"></span>
                     </button>
-                    <a href="index.html" class="navbar-brand">NATURAGRAM.</a>
+                    <a href="../index.html" class="navbar-brand">NATURAGRAM.</a>
                 </div>
 
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="active"><a href="../index.html">Home</a></li>
                     </ul>
                 </div>
 
@@ -86,8 +77,13 @@
     The fact that people willingly crush the poppies to take pictures is a danger for the reserve.
     In March of this year, on a saturday, 50 000 persons went to the Poppy Reserve.
     On the following Monday 105 000 instagram posts used the hashtag #superbloom.
-          </br>
-          </br>
+        </br>
+        </br>
+
+        </section>
+
+        <section class="art2">
+
           <a href="https://en.wikipedia.org/wiki/Antelope_Valley_California_Poppy_Reserve"> Link to the Wikipedia page </a>
 
         </section>
