--- a/pages/conclu.html
+++ b/pages/conclu.html
@@ -31,13 +31,6 @@
     <body>
 
 
-        <!-- PRE LOADER -->
-
-        <div class="preloader">
-             <div class="sk-spinner sk-spinner-pulse"></div>
-        </div>
-
-
 
         <!-- Navigation Section -->
 
@@ -48,12 +41,12 @@
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon icon-bar"></span>
                     </button>
-                    <a href="index.html" class="navbar-brand">NATURAGRAM.</a>
+                    <a href="../index.html" class="navbar-brand">NATURAGRAM.</a>
                 </div>
 
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="active"><a href="../index.html">Home</a></li>
                     </ul>
                 </div>
 
@@ -90,7 +83,10 @@
       wild areas that are not known yet is possible when you do not geotag your location, so this is why the #NoGeotagging was born.
       In the same spirit, the #Don’tDoomTheBloom from Antelope Valley Poppy Reserve tend to preserve those flowers.
     </section>
-    <p></p>
+
+    </br>
+    </br>
+
     <section class="conclu">
     <a href="https://www.instagram.com/katieboue/?hl=fr"> Katie Boué's instagram <a/>
 		</section>
