--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                      <li><a href="#" class="opc-main-bg" data-filter=".video">Video</a></li>
 									                   <li><a href="#" class="opc-main-bg" data-filter=".start">Introduction</a></li>
                                      <li><a href="#" class="opc-main-bg" data-filter=".s1">Geotagging</a></li>
-                                     <li><a href="#" class="opc-main-bg" data-filter=".s2">Poppy Reserve</a></li>
+                                     <li><a href="#" class="opc-main-bg" data-filter=".s2">Case Study</a></li>
 									                   <li><a href="#" class="opc-main-bg" data-filter=".end">Conclusion</a></li>
                                      <li><a href="#" class="opc-main-bg" data-filter=".biblio">Sitography</a></li>
                                 </ul>
