--- a/pages/conclu.html
+++ b/pages/conclu.html
@@ -74,14 +74,12 @@
         </section>
 
 		<section class="conclu">
-      Influencers are a reflection of society : people tend to imitate what influencers are doing but where do the influencers get the idea to take some picture ?
-      Because of consumerism, national parks have to adapt, in Yosemite, you can have a walk and post a photo instantly thanks to the countless wifi access point,
-      and meanwhile why don’t you take a coffee at the Starbuck that stands in the middle of nature ? All national parks diversified their offer to the public,
-      now its not just about camping and hiking, its about the experience and the pictures you will be able to take.
+      Influencers are a reflection of society : people tend to imitate what influencers are doing but where does the influencers get the idea to take some picture ?
+Because of consumerism, national parks have to adapt, in Yosemite, you can have a walk and post a photo instantly thanks to the countless wifi access point, and meanwhile why don’t you take a coffee at the Starbuck that stand in the middle of nature ? All national park diversified their offer to the public, now it’s not just about camping and hiking, it’s about the experience and the picture you will be able to take.
 
-      No more criticising, there is not just bad influencers, and sheeps behind, some people understands that protecting nature is important and protecting
-      wild areas that are not known yet is possible when you do not geotag your location, so this is why the #NoGeotagging was born.
-      In the same spirit, the #Don’tDoomTheBloom from Antelope Valley Poppy Reserve tend to preserve those flowers.
+No more criticising, there is not just bad influencers, and their faithful disciples behind them. Some people understand that protecting nature is important and protecting wild areas that are not known yet is possible when you do not geotag your location. To pursue this goal they created #NoGeotagging in order to popularize this eco-friendly trend. In the same vein, the #Don’tDoomTheBloom from Antelope Valley Poppy Reserve tends to preserve those flowers by influencing people to avoid posting pictures of them in the flowers.
+To portrayed this “good influencer” profile, we discovered Katie Boué during our researches.  She is an outdoor influencer who respects the places she went to. Her posts do not contain geotag and she brings awareness to her community of followers by posting inspiring quotes to encourage the preservation of the environment. She also helps them by giving practical advises to learn how to live in harmony with Nature.
+
     </section>
 
     </br>
