--- a/pages/intro.html
+++ b/pages/intro.html
@@ -75,11 +75,13 @@
 
   	<section class="intro">
 
-      Social media, more particularly Instagram, the most visual one, bring their share of Influencers.
-      Influencers have an indirect impact on the environment, they geotag their posts and so, bring more people on sites.
-      Indeed, 500 millions people use Instagram every day. Imagine the number of people who see the posts of influencers !
-      Those people get inspired by them and so want to recreate those posts in the same places. This create mass tourism.
+  You think that Instagram and pollution have nothing in common? Well we will show the opposite.
 
+  Here, we are going to talk about social media and the impact they have on the environment. We will focus on Instagram because it is the most visual one. Social media are websites and applications that enable users to create and share content or to participate in social network. We can find influencers on those platforms. An influencer is an individual who has the power to affect his community because of his authority, knowledge, position or relation with their audience. Those said influencers have an indirect impact on the environment.
+
+  Indeed, some of them use the geotagging which is the process of adding geographical identification to various media such as photographs and videos. This practice creates mass tourism in places that were not made to accommodate this amount of persons. For the record, mass tourism is a form of tourism which involves tens of thousands of people going to the same place often at the same time of the year. Geotagging creates that phenomenon.
+
+  So we are going to answer the question : how does influencers have an indirect impact on the environment? We will answer this by first, talking about mass tourism and its causes in our time, then we will do a case study on Antelope Valley California Poppy Reserve.
 
 		</section>
 
